syntax = "proto3";

option csharp_namespace = "BankServer";

service BankService {
	// 2PC
}


